<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.GameFragment">

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_fragment_timer_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:textColor="@color/purple_700"
        />

    <TextView
        android:id="@+id/tv_sum"
        style="@style/QuestionTextStyle"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:background="@drawable/circle_background"
        android:text="1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_left_number"
        />

    <TextView
        android:id="@+id/tv_left_number"
        style="@style/QuestionTextStyle"
        android:background="@color/teal_700"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/tv_question"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        android:text="7"
        app:layout_constraintBottom_toTopOf="@id/tv_option_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_sum"
        />

    <TextView
        android:id="@+id/tv_question"
        style="@style/QuestionTextStyle"
        android:background="@color/teal_700"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@id/tv_left_number"
        app:layout_constraintBottom_toBottomOf="@id/tv_left_number"
        app:layout_constraintStart_toEndOf="@id/tv_left_number"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/question_mark"
        />

    <TextView
        android:id="@+id/tv_option_1"
        android:layout_width="0dp"
        style="@style/OptionTextStyle"
        android:layout_height="wrap_content"
        android:text="1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_option_2"
        app:layout_constraintBottom_toTopOf="@id/tv_option_4"
        android:background="@android:color/holo_green_light"
        />
    <TextView
        android:id="@+id/tv_option_2"
        android:layout_width="0dp"
        style="@style/OptionTextStyle"
        android:layout_height="wrap_content"
        android:text="2"
        app:layout_constraintStart_toEndOf="@id/tv_option_1"
        app:layout_constraintEnd_toStartOf="@id/tv_option_3"
        app:layout_constraintBottom_toTopOf="@id/tv_option_4"
        android:background="@android:color/holo_orange_light"
        />

    <TextView
        android:id="@+id/tv_option_3"
        android:layout_width="0dp"
        style="@style/OptionTextStyle"
        android:layout_height="wrap_content"
        android:text="3"
        app:layout_constraintStart_toEndOf="@+id/tv_option_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_option_4"
        android:background="@android:color/holo_blue_bright"
        />
    <TextView
        android:id="@+id/tv_option_4"
        android:layout_width="0dp"
        style="@style/OptionTextStyle"
        android:layout_height="wrap_content"
        android:text="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/holo_blue_light"
        />
    <TextView
        android:id="@+id/tv_option_5"
        android:layout_width="0dp"
        style="@style/OptionTextStyle"
        android:layout_height="wrap_content"
        android:text="5"
        app:layout_constraintStart_toEndOf="@id/tv_option_4"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_6"
        app:layout_constraintBottom_toBottomOf="@id/tv_option_4"
        android:background="@android:color/holo_red_light"
        />
    <TextView
        android:id="@+id/tv_option_6"
        android:layout_width="0dp"
        style="@style/OptionTextStyle"
        android:layout_height="wrap_content"
        android:text="6"
        app:layout_constraintStart_toEndOf="@id/tv_option_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_option_4"
        android:background="@android:color/holo_purple"
        />

    <TextView
        android:id="@+id/tv_answers_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress_answers"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_left_number"
        app:layout_constraintBottom_toTopOf="@id/progress_bar"
        android:layout_margin="16dp"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_option_2"
        app:layout_constraintTop_toBottomOf="@id/tv_answers_progress"
        />
</androidx.constraintlayout.widget.ConstraintLayout>